# businessos

./: .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml  temp_test.yaml
businessos/: __init__.py  cli.py
businessos/core/: compiler.py  ontology.py  validator.py
businessos/templates/: pydantic_model.py.j2  typescript_interfaces.ts.j2
ontology/customers/: segments.yaml
ontology/marketing/: campaigns.yaml
ontology/operations/: metrics.yaml
ontology/products/: offerings.yaml
ontology/sales/: qualifications.yaml
tests/: test_ontology.py
